fix spacing around list elements

--- a/css/partials/_site.sass
+++ b/css/partials/_site.sass
@@ -27,12 +27,15 @@ blockquote
 p, ul, ol, blockquote
   line-height: 1.7em
 
-p
+p, ul, ol
   margin: 0 0 1em
 
 
 ol, ul
   padding-left: 3em
+
+li
+  margin-bottom: 1em
 
 // li
 //   padding: 0 0 0.5em 0
